src/objects/Issuing_Agency_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Issuing_Agency__c</fullName>
        <label>Issuing Agency</label>
        <referenceTo>IssuingAgency__c</referenceTo>
        <relationshipLabel>Issuing Agency Contacts</relationshipLabel>
        <relationshipName>Issuing_Agency_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Issuing Agency Contact</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issuing Agency Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>